Add profile day status history
